github-404 Fix build for JDK 8